syntax = "proto3";

package credential_settings_def.v1;

message GetCredentialSettingsRequest {
  string id = 1; // User ID
}

message GetCredentialSettingsResponse {
  bool has_password = 1;
  bool mfa_enabled = 2;
  optional string login_apple_id = 3;
  optional string login_google_id = 4;
}
